<resources>
    <string name="app_name">Kaushal Panjee</string>
    <string name="login_id">Login Id</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="welcome_back">Hey, Let\'s shine today!</string>
    <string name="welcome_msg">Hi there, You\'ve been missed.</string>
    <string name="register"><u>Register</u></string>
    <string name="bankConsent" translatable="false"><u>Give Consent</u></string>
    <string name="forgot_password"><u>Forgot id and Password?</u></string>
    <string name="forgot_id"><u>Forgot id?</u></string>
    <string name="create_an_account">Create an account</string>
    <string name="create_an_account_msg">Just join and explore new opportunities</string>
    <string name="email">Enter Email</string>
    <string name="enter_phone">Enter Phone Number</string>
    <string name="entrt_otp">Enter OTP</string>
    <string name="enter_code">Enter OTP</string>
    <string name="not_receive_code">Did\'t receive a code!</string>
    <string name="send_again"><u>Send Again</u></string>
    <string name="verify">Verify</string>
    <string name="enter_code_msg">Please enter 4 digit OTP sent to your phone number</string>
    <string name="enter_code_email_msg">Please enter 4 digit OTP sent to your email address</string>
    <string name="state_name">State Name</string>
    <string name="select_state">Select State</string>
    <string name="slected_state">Selected State</string>
    <string name="blank"><u></u></string>
    <string name="aadhaar">Enter aadhaar number</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="aadhaar_number">Enter aadhaar</string>
    <string name="secc_information">SECC Information</string>
    <string name="address_information">Address Information</string>
    <string name="personal_information">Personal Information</string>
    <string name="educational_information">Educational Information</string>
    <string name="employment_information">Employment Information</string>
    <string name="training_information">Training Information</string>
    <string name="state">State<font color='#FF0000'>*</font></string>
    <string name="district">District<font color='#FF0000'>*</font></string>
    <string name="select_district">Select district</string>
    <string name="select_gp">Select Gram panchayat</string>
    <string name="g_name">Father name / Guardian name</string>
    <string name="guardian_name">Guardian Name</string>
    <string name="mother_name">Mother name<font color='#FF0000'>*</font></string>
    <string name="guardian_alternative_number">Alternative mobile number<font color='#FF0000'>*</font></string>
    <string name="consent_text_short">I agree to voluntary share my identity information with e-kyc App. Read More</string>
    <string name="consent_text">I agree to voluntary share my identity information with e-kyc App.</string>
    <string name="candidate_name">Candidate name</string>
    <string name="father_name">Father name / Guardian name<font color='#FF0000'>*</font></string>
    <string name="category">Category<font color='#FF0000'>*</font></string>
    <string name="marital">Marital status<font color='#FF0000'>*</font></string>
    <string name="minority">Minority<font color='#FF0000'>*</font></string>
    <string name="pwd">PWD<font color='#FF0000'>*</font></string>
    <string name="nrega_job">Nrega job card</string>
    <string name="whether_shg_belong">Whether any member of household belong to SHG</string>
    <string name="do_you_Antyodaya">Do you have Antyodaya card</string>
    <string name="do_you_llRsby">Do you have RSBY/PM-JAY Card</string>
    <string name="do_you_Pip">Is PIP (Participatory Identification of Poor)</string>
    <string name="father_incomer">Yearly income of the family (In Rupees)</string>
    <string name="voter_id">Voter Id</string>
    <string name="driving_id">Driving License</string>
    <string name="submit">Submit</string>
    <string name="areIsecc">SECC</string>
    <string name="Gp">Gram panchayat<font color='#FF0000'>*</font></string>
    <string name="Village">Village<font color='#FF0000'>*</font></string>
    <string name="select_Village">Select Village</string>
    <string name="Block">Block<font color='#FF0000'>*</font></string>
    <string name="select_Block">Select Block</string>
    <string name="AdressLine">Street 1<font color='#FF0000'>*</font></string>
    <string name="AdressLine1">Street 1</string>
    <string name="AdressLine2">Street 2</string>
    <string name="PresenrAddress">Present Address</string>
    <string name="PresenrAddressSame">Is your present address the same as your permanent address?</string>
    <string name="Educational_information">Educational Information</string>
    <string name="Employment_information">Employment Information</string>
    <string name="Training_information">Training Information</string>
    <string name="Banking_information">Financial Information</string>
    <string name="select_HighestEducation">Highest Education<font color='#FF0000'>*</font></string>
    <string name="select_HighestEducation1">Highest Education</string>
    <string name="select_YearOfPassing">Year of passing of highest qualification</string>
    <string name="select_YearOfPassingTech">Year of passing of technical qualification</string>
    <string name="anyTechnicalEducation">Technical Education?<font color='#FF0000'>*</font></string>
    <string name="TechnicalEducation1">Technical Education<font color='#FF0000'>*</font></string>
    <string name="TechnicalEducation2">Technical Education<font color='#FF0000'>*</font></string>
    <string name="DomainOfTech">Domain of Technical Education<font color='#FF0000'>*</font></string>
    <string name="curentlyEmployed">Are you currently employed?<font color='#FF0000'>*</font></string>
    <string name="natureOfEmpl">What is the nature of employment?</string>
    <string name="IntrestedIn">Interested in?<font color='#FF0000'>*</font></string>
    <string name="EmploymentPreference">Employment Preference<font color='#FF0000'>*</font></string>
    <string name="JobLocationPreference">Location Preference<font color='#FF0000'>*</font></string>
    <string name="CurrentEarning">What is personal current monthly earning in Rupees?</string>
    <string name="CurrentEarningHint">Current Earning</string>
    <string name="ExpectationSalary">Expected Minimum Monthly Salary (Rs.)</string>
    <string name="recievedAnyTrainingBefore">Have you received any training before?<font color='#FF0000'>*</font></string>
    <string name="PreviousComTraining">Previously completed training in</string>
    <string name="selectScheme">Select Scheme</string>
    <string name="select_PreviouscompTrainingMOnth">Previously completed during</string>
    <string name="HeardAboutddugky">Where have you heard about DDUGKY/RSETI before?</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="PermanentAddress">Permanent Address</string>
    <string name="s_o_name_siwan_841226_bihar_india">C/O:Guardian Name,purani quila Siwan,\n Siwan,Siwan,Bihar841226,India</string>
    <string name="gender">Gender</string>
    <string name="which_sector_are_you_interested_in">Which Sector are you interested in?<font color='#FF0000'>*</font></string>
    <string name="design">Design</string>
    <string name="mechanical">Mechanical</string>
    <string name="which_trade_are_you_interested_in">Which Trade are you interested in?<font color='#FF0000'>*</font></string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="enter_ifsc_code">Enter IFSC Code</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="pan_no">PAN No</string>
    <string name="enter_pan_no">Enter PAN No</string>
    <string name="image">Image</string>
    <string name="search">Enter training center Name</string>
    <string name="services_for_you">Services for you</string>
    <string name="unableto_find_yourself_in_secc_drop_down">Unable to find yourself in SECC drop_down?</string>
    <string name="ahl_tin">AHL-TIN</string>
    <string name="pin_code">Pin Code<font color='#FF0000'>*</font></string>
    <string name="pin_code1">Pin Code</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="name">Name</string>
    <string name="upload_voter_id">Upload Voter Id</string>
    <string name="upload_pip">Upload Pip</string>
    <string name="upload_pmayg_doc">Upload PMAYG Document</string>
    <string name="upload_driving_licence">Upload Driving licence</string>
    <string name="download_failed">Downloading of aadhaar verification app is failed, Please try again.</string>
    <string name="download_complete">Aadhaar verification app is downloaded.</string>
    <string name="complete_details"><![CDATA[Complete your profile & Start training now]]></string>
    <string name="complete_now">Complete Now</string>
    <string name="personal_details">Personal Details</string>
    <string name="address_details">Address Details</string>
    <string name="secc_details">SECC Details</string>
    <string name="education_details">Education Details</string>
    <string name="banking_details">Banking Details</string>
    <string name="your_aadhaar_ekyc_is_completed">Your Aadhaar eKYC is completed</string>
    <string name="select_category">Select Category</string>
    <string name="name1">Mandatory field 1<font color='#FF0000'>*</font></string>
    <string name="validate">Validate</string>
    <string name="upload_category_certificate">Upload SHG Member Proof</string>
    <string name="upload_shg_certificate">Upload SHG Certificate</string>
    <string name="upload_antyodaya_card">Upload Antyodaya Card</string>
    <string name="upload_rsby_pm_jay_card">Upload RSBY/PM-JAY CARD</string>
    <string name="upload_residence_certificate">Upload Residence Certificate</string>
    <string name="guardian_alternative_numbern">Alternative mobile number</string>
    <string name="mother_namer">Mother Name</string>
    <string name="something_went_wrong_at_uidai_site">Something went wrong at UIDAI side.</string>
    <string name="ok">Ok</string>
    <string name="self_employed">Self Employed</string>
    <string name="salary">Salary</string>
    <string name="ekyc_completed">eKYC Completed</string>
    <string name="job">Job</string>
    <string name="training">Training</string>
    <string name="both">Both</string>
    <string name="salaried">Salaried</string>
    <string name="within_district">Within District</string>
    <string name="within_state">Within State</string>
    <string name="outside_side">Outside State</string>
    <string name="outside_country">Outside Country</string>
    <string name="ddugky">DDUGKY</string>
    <string name="rseti">RSETI</string>
    <string name="pmkvy">PMKVY</string>
    <string name="others">Others</string>
    <string name="mention_others_training">Mention if others training</string>
    <string name="select_sector">Select Sector</string>
    <string name="select_trade">Select Trade</string>
    <string name="have_you_heard_about_ddugky_rseti">Have You Heard About DDUGKY/RSETI?</string>
    <string name="father_name_f">Father Name</string>
    <string name="a_tin_no">A-TIN No</string>
    <string name="search_">Search...</string>
    <string name="languages">Languages<font color='#FF0000'>*</font></string>
    <string name="hindi">हिंदी</string>
    <string name="english">English</string>
    <string name="mrathi">ಕನ್ನಡ</string>
    <string name="read">Read\n</string>
    <string name="write">Write</string>
    <string name="select_languages">Select Languages</string>
    <string name="sector">Sector<font color='#FF0000'>*</font></string>
    <string name="find_a_training_center">Find a training center</string>
    <string name="pmvishwakarma">PM Vishwakarma</string>
    <string name="nrlm">NRLM</string>
</resources>