<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"

        >

        <ImageView
            android:id="@+id/ivDDT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_100"
            android:src="@drawable/ddy_logo"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/ivRSET"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivRSET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rseti_logo"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/ivDDT"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivDDT"
            app:layout_constraintTop_toTopOf="@+id/ivDDT" />


        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_50"
            android:fontFamily="@font/avenir_next_bold"
            android:gravity="center"
            android:text="@string/welcome_back"
            android:textColor="@color/color_dark_green"
            android:textSize="@dimen/sp_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivDDT" />

        <TextView
            android:id="@+id/tvWelcomeMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_next_bold"
            android:gravity="center"
            android:text="@string/welcome_msg"
            android:textColor="@color/color_sub_text"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

        <LinearLayout
            android:id="@+id/llFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/etEmail"
                style="@style/EditText"
                android:layout_marginHorizontal="@dimen/dp_30"
                android:drawableEnd="@drawable/ic_user_id"
                android:hint="@string/login_id"
                android:imeOptions="actionNext"
                android:drawablePadding="@dimen/dp_10"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/dp_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

            <EditText
                android:id="@+id/etPassword"
                style="@style/EditText"
                android:layout_marginHorizontal="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_20"
                android:drawableEnd="@drawable/close_eye"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_35"
            android:layout_marginTop="@dimen/dp_20"
            android:fontFamily="@font/avenir_next_medium"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/color_dark_green"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="@+id/llFields"
            app:layout_constraintTop_toBottomOf="@+id/llFields"

            />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_20"
            android:fontFamily="@font/avenir_next_medium"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/color_dark_green"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toTopOf="@+id/tvLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/tvLogin"
            style="@style/Button"
            android:layout_marginBottom="@dimen/dp_50"
            android:drawableEnd="@drawable/ic_right_arrow"
            android:drawablePadding="@dimen/dp_20"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"


            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>