<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_top_round"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/ivTopLogo"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/dp_12"
            >


            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_70"
                android:id="@+id/ivDDGKY"
                android:src="@drawable/ic_ddgky"
                />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_70"
                android:id="@+id/ivRSETI"
                android:src="@drawable/ic_rseti"
                android:layout_marginStart="@dimen/dp_20"

                />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/dp_20"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/stateSpinn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">


        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_next_bold"
            android:gravity="center"
            android:text="@string/find_a_training_center"
            android:textColor="@color/color_dark_green"
            android:textSize="@dimen/sp_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_16"
            android:fontFamily="@font/avenir_next_demi_bold"
            android:padding="@dimen/dp_4"
            android:text="@string/state"
            android:textColor="@color/color_dark_green" />



        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_next_demi_bold"
            android:hint="@string/select_state"
            android:padding="1dp"
            android:layout_marginStart="@dimen/dp_3"
            android:textColorHint="@color/color_dark_green"
            app:boxStrokeColor="@color/color_dark_green">

            <AutoCompleteTextView
                android:id="@+id/spinnerStateName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:textColor="@color/color_dark_green"
                android:textSize="15sp"
                tools:ignore="LabelFor"
                />

        </com.google.android.material.textfield.TextInputLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/districtspin"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stateSpinn">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_16"
            android:fontFamily="@font/avenir_next_demi_bold"
            android:padding="@dimen/dp_4"
            android:text="@string/district"
            android:textColor="@color/color_dark_green" />



        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/statespinn"
            android:fontFamily="@font/avenir_next_demi_bold"
            android:hint="@string/select_district"
            android:padding="1dp"
            android:layout_marginStart="@dimen/dp_3"
            android:textColorHint="@color/color_dark_green"
            app:boxStrokeColor="@color/color_dark_green">

            <AutoCompleteTextView
                android:id="@+id/SpinnerDistrictName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:textColor="@color/color_dark_green"
                android:textSize="15sp"
                tools:ignore="LabelFor"
                />

        </com.google.android.material.textfield.TextInputLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/dp_20"
        android:id="@+id/sectorspin"
        android:layout_marginEnd="@dimen/dp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/districtspin">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_16"
            android:fontFamily="@font/avenir_next_demi_bold"
            android:padding="@dimen/dp_4"
            android:text="@string/sector"
            android:textColor="@color/color_dark_green" />



        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sectorspinn"
            android:fontFamily="@font/avenir_next_demi_bold"
            android:hint="@string/select_sector"
            android:padding="1dp"
            android:layout_marginStart="@dimen/dp_3"
            android:textColorHint="@color/color_dark_green"
            app:boxStrokeColor="@color/color_dark_green">

            <AutoCompleteTextView
                android:id="@+id/SpinnerSectorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:textColor="@color/color_dark_green"
                android:textSize="15sp"
                tools:ignore="LabelFor"
                />

        </com.google.android.material.textfield.TextInputLayout>




        <TextView
            android:id="@+id/tvLogin"
            style="@style/Button"
            android:layout_marginBottom="@dimen/dp_20"
            android:drawablePadding="@dimen/dp_20"
            android:text="@string/login"
            android:layout_marginTop="@dimen/dp_20"
            app:drawableEndCompat="@drawable/ic_right_arrow"
            app:layout_constraintBottom_toTopOf="@+id/tvRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            />



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>